...
                                        </constraints>
                                        <segments>
                                            <segment title="Breakfast"/>
                                            <segment title="Lunch"/>
                                            <segment title="Dinner"/>
                                        </segments>
                                        <color key="tintColor" red="0.27058823529999998" green="0.30196078430000001" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <color key="backgroundColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                                        <state key="normal" title="Confirm">
                                            <color key="titleColor" red="0.27058823529999998" green="0.30196078430000001" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="min" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7po-qw-KRJ" userLabel="minCalories">
                                        <rect key="frame" x="89" y="82" width="124" height="30"/>
                                        <nil key="textColor"/>
...
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="max" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tw4-xe-i2J" userLabel="maxCalories">
                                        <rect key="frame" x="241" y="82" width="124" height="30"/>
                                        <nil key="textColor"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="min" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4CL-p9-OmE" userLabel="minTime">
                                        <rect key="frame" x="89" y="122" width="124" height="30"/>
                                        <nil key="textColor"/>
...
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="max" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BYd-Lt-tOa" userLabel="maxTime">
                                        <rect key="frame" x="241" y="122" width="124" height="30"/>
                                        <nil key="textColor"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                                        <state key="normal" title="Save">
                                            <color key="titleColor" red="0.27058823529999998" green="0.30196078430000001" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <color key="backgroundColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                                        <state key="normal" title="logout">
                                            <color key="titleColor" red="0.27058823529999998" green="0.30196078430000001" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                        <outlet property="mealSegmentControll" destination="qOG-eH-HzO" id="Nsb-8Y-fUA"/>
                        <outlet property="noMealChosenLabel" destination="dbu-mb-mF5" id="A3V-uw-p88"/>
                        <outlet property="recipeDetailsContainer" destination="Yka-yY-ev4" id="wcR-Se-jYX"/>
                        <outlet property="recipeImage" destination="B8D-KZ-bfr" id="SKs-tM-sed"/>
                        <outlet property="recipeNameLabel" destination="lbq-NP-LKf" id="ooP-lU-drs"/>
...
        <scene sceneID="Wjj-OR-gN9">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dyA-T2-KXe" userLabel="Menu" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Menu" image="menu" id="fEg-sb-fxv"/>
                    <toolbarItems/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nwc-Ji-EyQ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="settings" id="Ke0-Ia-fJY"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="d0l-v5-Z4x">
...
