//
//  AccessibilityIdentifiers.swift
//  RecipeAid
//
//  Created by Meir Rosendorff on 2019/06/13.
//  Copyright © 2019 Meir Rosendorff. All rights reserved.
//

import Foundation

enum Identifiers: String {
  case recipeName = "Recipe's Name"
  case recipeDetailsContainer = "Details Container"
  case ingredientsLabel = "Ingredients Label"
  case ingredientTableView = "Ingredient Tableview"
  case noRecipeLabel = "No Ingredients Label"
  case searchBar = "SearchBar"
  case noResultsLabel = "No Results"
  case tableViewCell = "TableViewCell"
  case servingsLabel = "Number of Servings"
  case caloriesLabel = "Number of Calories"
  case textBoxBlackout = "TextBox Blackout"
  case minCalories = "Minimum Calories"
  case maxCalories = "Maximum Calories"
  case minTime = "Minimum Time"
  case maxTime = "Maximum Time"
  case unwantedFoods = "Unwanted Foods"
  case shoppingDateRange = "Shopping List Date Range"
  case noShopping = "No Shopping"
  case fullInstructionsLabel = "See Full Instructions"
  case logout = "Logout Button"
  case usernameTextField = "username Text Field"
  case passwordTextField = "password text field"
  case login = "Login Button"
  case errorLogingIn = "Error loging in label"
}
