...
    dietryRestrictionsTextBox.accessibilityIdentifier = Identifiers.unwantedFoods.rawValue
    logoutButton.accessibilityIdentifier = Identifiers.logout.rawValue
  }

  private func setUpSavedAlert() {
    self.savedAlert = UIAlertController(
      title: "Saved", message: "Settings Succesfully Saved", preferredStyle: UIAlertController.Style.alert)
  }

  @objc private func dismissAlert() {
    self.savedAlert.dismiss(animated: true, completion: nil)
  }

...
    viewModel.setUnwatedFoods(foods: dietryRestrictionsTextBox.text ?? "")
    return true
  }

  private func displayErrorAlert(error: Error, forLabel label: String) {

    let alert = UIAlertController(title: "Error Saving", message: "", preferredStyle: UIAlertController.Style.alert)
    switch error {
    case RecipeError.invalidNumberString:
      alert.message = "\(label) must be a number!"
    case RecipeError.minMaxError:
      alert.message = "minimum \(label) must be less than maximum"
    default:
...
